work on assignments

--- a/10_exercises.ipynb
+++ b/10_exercises.ipynb
@@ -59,7 +59,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 01 Getting started\n"
+    "## 01 Getting started"
    ]
   },
   {
@@ -704,7 +704,7 @@
     "```\n",
     "</details>\n",
     "\n",
-    "b) Add an element, `zipcode`, to the address map\n",
+    "b) Add an element, `zipcode`, to the address map (containing `street` and `number`)\n",
     "<details>\n",
     "  <summary style = \"color:OrangeRed;cursor:pointer;\">&#10149; Give me the solution</summary>\n",
     "  \n",
@@ -743,20 +743,20 @@
     "    ZP11[1][:] = [\"Economics\"]\n",
     "```\n",
     "\n",
-    "    This works because you can swap the <i>contents</i> of the entire list!\n",
+    "This works because you can swap the <i>contents</i> of the entire list!\n",
     "</details>\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "ZP11 = ({'street': 'Zernikeplein',\n",
-    "            'number': 11}, \n",
-    "            [\"Life Sciences\", \"Building env\", \"ICT\", \"Engineering\"],\n",
-    "            ('Wing A', 'Wing B', 'Wing C', 'Wing H'))\n",
+    "         'number': 11}, \n",
+    "         [\"Life Sciences\", \"Building env\", \"ICT\", \"Engineering\"],\n",
+    "         ('Wing A', 'Wing B', 'Wing C', 'Wing H'))\n",
     "# YOUR CODE"
    ]
   },
@@ -807,7 +807,7 @@
     "    \n",
     "</details>\n",
     "\n",
-    "<br />\n",
+    "<br>\n",
     "\n",
     "<details>\n",
     "  <summary style = \"color:OrangeRed;cursor:pointer;\">&#10149; Give me another hint!</summary>\n",
@@ -841,52 +841,112 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 02.4 dict\n",
-    "\n",
-    "There are also several ways to make this block of code work."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "# 03. Flow control"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "### 03.1 if/else (1)\n",
+    "Using the `input()` function, ask the user their full name. Check the number of separate names. For instance, my full name is Michiel Andries Noback (don't tell anybody)! So the count is 3. If the count is higher than 3, ask the user whether they are catholic. If the answer is \"no\", you must conclude they are royalty. If the count is 2 or 3, conclude they are a commoner. With a count of 1, they must be a popstar!\n",
+    "\n",
+    "<details>\n",
+    "  <summary style = \"color:OrangeRed;cursor:pointer;\">&#10149; Give me a hint!</summary>\n",
+    "  <pre><code>\n",
+    "name = input('Please give your full name: ')\n",
+    "if len(name.split(\" \")) > 3:\n",
+    "    pass\n",
+    "  </code></pre>\n",
+    "</details>"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Functions"
+    "### 03.2 if/else (2)\n",
+    "Using the `input()` function, ask the user whether they like fish. Convert the input to lowercase so \"Yes\", \"yes\" and \"YES\" are all correct. Check the resulting answer (it should be yes or no, nothing else).  \n",
+    "Next, ask the user whether they like meat. With these two inputs, give a pizza suggestion (e.g. vegetariana for people who said \"no\" to both questions). Look up a pizza menu from your favourite restaurant.  \n",
+    "Feel free to adjust or expand to your liking!\n",
+    "\n",
+    "<details>\n",
+    "  <summary style = \"color:OrangeRed;cursor:pointer;\">&#10149; Give me a hint!</summary>\n",
+    "  <pre><code>\n",
+    "correct_answers = {'yes', 'no'}\n",
+    "fish = input('do you like fish on your pizza [y/n]?')\n",
+    "\n",
+    "if not fish.lower() in correct_answers: #or if fish.lower() != 'yes' or fish.lower() != 'no':\n",
+    "    fish = input('Only \"yes\" or \"no\" allowed! Do you like fish on your pizza [y/n]?')\n",
+    "  </code></pre>\n",
+    "</details>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 03.3 looping with `for`\n",
+    "\n",
+    "Given the text presented below, report \n",
+    "1. the number of sentences\n",
+    "1. the number of words in each sentence\n",
+    "2. the words that are repeated at least once\n",
+    "3. the count of each letter (challenge: only _alphabet_ characters)\n",
+    "There are several looping scenarios to address both word count and letter count: nested or after each other.\n",
+    "\n",
+    "<details>\n",
+    "  <summary style = \"color:OrangeRed;cursor:pointer;\">&#10149; Give me a hint!</summary>\n",
+    "    Besides some <code>split()</code>ting and looping, this assignment requires the use of sets and/or dictionaries. \n",
+    "</details>\n",
+    "<br>\n",
+    "<details>\n",
+    "  <summary style = \"color:OrangeRed;cursor:pointer;\">&#10149; Give me another hint!</summary>\n",
+    "  <pre><code>\n",
+    "letters = dict()\n",
+    "sentences = text.split(\".\")\n",
+    "for sentence_count, sentence in enumerate(sentences):\n",
+    "    pass\n",
+    "  </code></pre>\n",
+    "</details>"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "hello\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "print(\"hello\")"
+    "text = \"\"\"Python is a high-level, general-purpose programming language. \n",
+    "Its design philosophy emphasizes code readability with the use of significant indentation.\n",
+    "Python is dynamically-typed and garbage-collected. \n",
+    "It supports multiple programming paradigms, including structured (particularly procedural), \n",
+    "object-oriented and functional programming.\"\"\"\n",
+    "\n",
+    "# YOUR CODE"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 04 Functions"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 04.1 Refactor to use functions\n",
+    "\n",
+    "Refactor the above assignment (03.3) to use functions for each sub-assignment. You will end up with at least 4 functions, something like this:\n",
+    "- `count_sentences(text)`: counts the number of sentences\n",
+    "- `count_words(sentence)`: counts the words in a sentence \n",
+    "- `process_words(sentence, word_dict)`: Counts the different words in a sentence. If `word_dict` is `None`, create a new one, else use the given dict!\n",
+    "- `get_letter_frequency(sentence, letter_dict)`: Determines the letter frequencies in the sentence. If `letter_dict` is `None`, create a new one, else use the given dict!\n",
+    "\n",
+    "You can ignore the fact that this may not be the most efficient way to get all statistics in a single analysis. \n",
+    "Feel free to be creative in your refactoring."
    ]
   },
   {
@@ -912,7 +972,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -944,7 +1004,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.9.13"
   },
   "vscode": {
    "interpreter": {
