work on assignments

--- a/02_data.ipynb
+++ b/02_data.ipynb
@@ -980,6 +980,14 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### DIY\n",
+    "Now take some time to figure out what the `dict` methods `setdefault()` and `getdefault()` are for and how they are used. Try them out!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
