--- a/10_exercises.ipynb
+++ b/10_exercises.ipynb
@@ -899,7 +899,7 @@
     "  <summary style = \"color:OrangeRed;cursor:pointer;\">&#10149; Give me a hint!</summary>\n",
     "    Besides some <code>split()</code>ting and looping, this assignment requires the use of sets and/or dictionaries. \n",
     "</details>\n",
-    "<br>\n",
+    "\n",
     "<details>\n",
     "  <summary style = \"color:OrangeRed;cursor:pointer;\">&#10149; Give me another hint!</summary>\n",
     "  <pre><code>\n",
@@ -908,12 +908,31 @@
     "for sentence_count, sentence in enumerate(sentences):\n",
     "    pass\n",
     "  </code></pre>\n",
+    "</details>\n",
+    "\n",
+    "<details>\n",
+    "  <summary style = \"color:OrangeRed;cursor:pointer;\">&#10149; How do I count frequencies?</summary>\n",
+    "  <pre><code>\n",
+    "letter_freq = dict()\n",
+    "for char in text:\n",
+    "    letter_freq.setdefault(char, 0)\n",
+    "    # better than \n",
+    "    #if char not in letter_freq:\n",
+    "    #    letter_freq[char] = 0\n",
+    "    letter_freq[char] += 1\n",
+    "  </code></pre>\n",
+    "    This is out of scope for this course, but too nice to leave unmentioned. See alse \n",
+    "    <a href=\"https://realpython.com/python-counter/#:~:text=Counter%20is%20a%20subclass%20of,argument%20to%20the%20class's%20constructor.\" target=\"_blank\">here</a>\n",
+    "  <pre><code>\n",
+    "from collections import Counter\n",
+    "Counter(text)\n",
+    "  </code></pre>    \n",
     "</details>"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
