work on exercises

--- a/10_exercises.ipynb
+++ b/10_exercises.ipynb
@@ -983,27 +983,166 @@
    ]
   },
   {
+   "cell_type": "raw",
+   "metadata": {},
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Regex"
+    "# 10. Programming challenges\n",
+    "All these challenges require you to use several to many of the learned concepts of this course. They are star-coded to indicate the difficulty level, ranging from one `*` to five `*****`. Some challenges start out with one star, but are more stars when finished completely.\n",
+    "\n",
+    "You are encouraged to create real programs in dedicated scripts, with a `main()` method that is called from within this construct:\n",
+    "\n",
+    "```python\n",
+    "if __name__ == \"__main__\":\n",
+    "   #Start application here\n",
+    "```\n",
+    "\n",
+    "Write functions that are small, well-documented, and serve only a single well-defined purpose.\n",
+    "To become a real-world programmer you could also start making use of the `argparse` module."
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 2,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The area of an equilateral triangle with side         2.0 is 2.0\n"
-     ]
-    }
-   ],
    "source": [
-    "%run ./scripts/triangle_surface.py 2"
+    "### 10.1 A number guessing game (**)\n",
+    "\n",
+    "Write an application that asks the user to think of a number, and try to guess this number as efficiently as possible.\n",
+    "\n",
+    "For instance, program output could be:\n",
+    "\n",
+    "```\n",
+    "Please think of a number between 0 and 10. Press enter when you are ready.\n",
+    "\n",
+    "Is the number above 3? [enter y for yes and n for no]\n",
+    "n\n",
+    "Is the number above 1? [enter y for yes and n for no]\n",
+    "y\n",
+    "Is the number 2?\n",
+    "n\n",
+    "The number must be 3!\n",
+    "```\n",
+    "\n",
+    "Think before you start! What would be the most efficient \"algorithm\" to find the number?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 10.2 Finding palindromes (* to ****)\n",
+    "\n",
+    "A palindrome is a word, phrase, or sequence that reads the same backwards as forwards, e.g. \"madam\" or \"nurses run\". In biological sequence analysis palindromes are often important protein-binding DNA elements. They are sometimes literal palindromes, as in \"GGATTAGG\", or _complementary_ palindromes, where the same sequence is present in the reverse complement strand of the double helix, as in GGAATTCC:\n",
+    "\n",
+    "```\n",
+    "5'-GGAATTCC-3'\n",
+    "3'-CCTTAAGG-5'\n",
+    "```\n",
+    "\n",
+    "1. Start by writing a single function that determines whether a given input string is a palindrome.\n",
+    "2. Next, write a function that looks for a palindrome with a minimal length within a given input string, where the rest of the string is not important. Apply this to \n",
+    "3. Extend this to processing a word list passed through the command-line. There are two such lists to be found in the `data` folder of this repo: `dutch_words.txt` and `english_woprds.txt`\n",
+    "4. Apply yourself to molecular biology: create a program that looks for palindromes in a given DNA sequence. The sequence below contains at least 2 palindromes of differing lengths. Challenges could be: Find all 6-nucleotide palindromes, or What is the longest palindrome in the human genome?\n",
+    "\n",
+    "```\n",
+    "5'-AGAGGATCCCTCCCATATATGCGGCGATCGCCGCATATCC-3'\n",
+    "```\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 10.3 Hangman word guessing game (***)\n",
+    "\n",
+    "Hangman is a word-quessing game where one party (in this case the computerprogram you will write) chooses a word that the other party needs to guess. The number of letters in the word is indicated with dashes or underscores.  \n",
+    "The guessing party takes turns guessing wich letter will be in the word. If the guessed letter is in the word the dashes are replaced at the correct position(s) with the letter. If the guessed letter is not in the word, a gallow is build piece by piece (one piece for each absent letter). In total, the gallow consists of nine parts, including the hanged. You can choose to visualize progress using another picture of course. The easiest way is using \"ASCII art\", as in this example:\n",
+    "\n",
+    "```python\n",
+    "HANGMAN = [\n",
+    "'''\n",
+    "  +---+\n",
+    "  |   |\n",
+    "  O   |\n",
+    " /|\\  |\n",
+    " / \\  |\n",
+    "      |\n",
+    "=========''']\n",
+    "```\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 10.4 Encrypt and decrypt messages using Caesar cipher (***)\n",
+    "\n",
+    "Caesar's cipher is one of the simplest and most widely known encryption techniques. Each letter in a text is replaced by a letter some fixed number of positions down (or iup) the alphabet.\n",
+    "For example, with a left shift of 3, D would be replaced by A, E would become B, and so on. The method is named after Julius Caesar, who used it in his private correspondence (see [Wikipedia](https://en.wikipedia.org/wiki/Caesar_cipher)).\n",
+    "\n",
+    "It is your task to create such a cipher, where the program takes two command-line arguments. The first one is the shift (left being negative) and the second a filename or a literal text.  \n",
+    "\n",
+    "Using the `argparse` module is a good idea, but not required."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 10.5 Implement k-Means clustering (****)\n",
+    "\n",
+    "The k-Means clustering algorithm is used much in data science to group data in an unsupervised manner. See [Wikipedia](https://en.wikipedia.org/wiki/K-means_clustering) for details.\n",
+    "\n",
+    "For this assignment you should implement this algorithm in a program that takes two command-line arguments. The first is a file with the input data and the second should be an optional argument for the `k-parameter` which defaults to 3. \n",
+    "\n",
+    "The output should be a file holding a copy of the input data, but with an extra column appended indicating the cluster number in which the example is put. For instance, given this input, a random sample from the famous \"Fisher's iris\" dataset:\n",
+    "\n",
+    "```\n",
+    " Sepal.Length Sepal.Width Petal.Length Petal.Width    Species\n",
+    "          6.2         3.4          5.4         2.3  virginica\n",
+    "          6.7         3.1          4.7         1.5 versicolor\n",
+    "          5.8         2.7          5.1         1.9  virginica\n",
+    "          4.8         3.0          1.4         0.1     setosa\n",
+    "          4.8         3.4          1.9         0.2     setosa\n",
+    "          6.5         3.0          5.8         2.2  virginica\n",
+    "          5.6         3.0          4.5         1.5 versicolor\n",
+    "          4.9         3.1          1.5         0.1     setosa\n",
+    "```\n",
+    "\n",
+    "could be clustered (using only the numerical columns!) as follows:\n",
+    "\n",
+    "```\n",
+    " Sepal.Length Sepal.Width Petal.Length Petal.Width    Species   cluster\n",
+    "          6.2         3.4          5.4         2.3  virginica         1\n",
+    "          6.7         3.1          4.7         1.5 versicolor         2\n",
+    "          5.8         2.7          5.1         1.9  virginica         1\n",
+    "          4.8         3.0          1.4         0.1     setosa         3\n",
+    "          4.8         3.4          1.9         0.2     setosa         3\n",
+    "          6.5         3.0          5.8         2.2  virginica         2\n",
+    "          5.6         3.0          4.5         1.5 versicolor         2\n",
+    "          4.9         3.1          1.5         0.1     setosa         3\n",
+    "```\n",
+    "\n",
+    "With only one mismatch between the `Species` and `cluster` columns.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 10.6 Implement nearest-neighbour clustering (****)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 10.7 Create a boids simulation (*****)"
    ]
   }
  ],
