--- a/02_data.ipynb
+++ b/02_data.ipynb
@@ -236,8 +236,17 @@
     }
    },
    "source": [
-    "## Collection types\n",
-    "\n",
+    "## Collection types"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "skip"
+    }
+   },
+   "source": [
     "Collection types, also named Container types, are exactly what their name implies; they are collections of other types (scalar or collection). The number of collection types in the base language is limited, and there are only a few that are used in the majority of cases; these are listed here. A very important aspect of collections is that they are **iterable**: they can be traversed to inspect or access all individual elements.\n"
    ]
   },
@@ -263,7 +272,7 @@
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
-     "slide_type": "slide"
+     "slide_type": "skip"
     }
    },
    "source": [
@@ -280,15 +289,28 @@
    },
    "source": [
     "### Slicing\n",
-    "A any sequence type can be compared to a street with houses. The address points to a house. In Python these addresses start at zero, but you can also start from the end, with -1:   \n",
+    "A any sequence type can be considered as a street with houses. The house number identifies a house within the street. In Python these addresses start at zero, but unlike house numbers you can also start from the end, with -1:   \n",
     "\n",
-    "```\n",
+    "<code style=\"font-size: x-large; font-weight: bold; color: darkred\">\n",
     " 0  1  2  3  4  5  6  7 \t\n",
     " A  B  C  D  E  F  G  H\n",
     "-8 -7 -6 -5 -4 -3 -2 -1\n",
-    "```\n",
+    "</code>\n",
     "\n",
-    "You can access a single house, a range of houses or every second or third. All this is done using **slicing**. Its general syntax is `[start:stop:step]`. The `step` is 1 by default and it is not mandatory, and if `start` or `stop` is omitted this means \"from the beginning (0)\" or \"to the end\". Note that `stop` is NOT inclusive! If you try to access an element (character) that does not exist you will get an `IndexError`.    \n",
+    "You can access a single house, a range of houses or in a pattern. All this is done using **slicing**. Its general syntax is `[start:stop:step]`.  \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "skip"
+    }
+   },
+   "source": [
+    "The `step` is 1 by default and it is not mandatory, and if `start` or `stop` is omitted this means \"from the beginning (0)\" or \"to the end\".  \n",
+    "Note that `stop` is NOT inclusive!  \n",
+    "If you try to access an element (character) that does not exist you will get an `IndexError`.    \n",
     "Here are some examples using strings. They work the same in lists and tuples as you will discover."
    ]
   },
@@ -403,7 +425,8 @@
    "source": [
     "### Meet the dot operator and objects\n",
     "\n",
-    "So far I have skipped the point that Python is an **Object-Oriented** programming language. Being object-oriented means the (almost) everything is being modeled as an entity with data and behaviour (e.g. methods) where the objects' **class** holds the _blueprint_ for creating objects (instances) according to that blueprint.  \n"
+    "So far I have skipped the point that Python is an **Object-Oriented** programming language.  \n",
+    "Being object-oriented means the (almost) everything is being modeled as an entity with data and behaviour (e.g. methods) where the objects' **class** holds the _blueprint_ for creating objects (instances) according to that blueprint.  \n"
    ]
   },
   {
@@ -414,14 +437,16 @@
     }
    },
    "source": [
-    "Let's explore this concept with the string type. In Python, strings have only a single property - their character sequence. They do, however, have many methods. Both properties and methods are accessed on an object using the **dot operator**. The difference lies in the fact that -unlike properties- methods have parentheses after their name that (optionally) define method arguments.  \n"
+    "Let's explore this concept with the string type. In Python, strings have only a single property - their character sequence. They do, however, have many methods.  \n",
+    "Properties and methods can borh be accessed on an object using the **dot operator**.  \n",
+    "The difference lies in the fact that -unlike properties- methods have parentheses after their name that (optionally) define method arguments.  \n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
-     "slide_type": "slide"
+     "slide_type": "skip"
     }
    },
    "source": [
@@ -434,7 +459,7 @@
    "execution_count": 24,
    "metadata": {
     "slideshow": {
-     "slide_type": "fragment"
+     "slide_type": "slide"
     }
    },
    "outputs": [
@@ -566,7 +591,12 @@
    "source": [
     "### Collection type `list`: []\n",
     "\n",
-    "A list is an **ordered mutable sequence of elements**. **Ordered** means that individual elements can be accessed using their index. **Mutable** means that lists can be extended, shortened, end elements can be changed (swapped). As with string objects, slicing is a very important technique for working with them. Accessing elements is done using square brackets `[]`.\n",
+    "A list is an **ordered mutable sequence of elements**.  \n",
+    "\n",
+    "**Ordered** means that individual elements can be accessed using their index.  \n",
+    "**Mutable** means that lists can be extended, shortened, end elements can be changed (swapped).  \n",
+    "\n",
+    "As with string objects, slicing is a very important technique for working with them. Accessing elements is done using square brackets `[]`.\n",
     "Here are a few basic operations with lists."
    ]
   },
@@ -702,7 +732,21 @@
    "source": [
     "### Collection type `tuple`: ()\n",
     "\n",
-    "A tuple is an **ordered immutable sequence of elements**. **Ordered** means that individual elements can be accessed using their index. **Immutable** means that tuples cannot be changes once they are created. As with string and list objects, slicing is a very important technique for working with them as long as they are not mutating operations. Accessing elements is done using square brackets `[]`. \n",
+    "A tuple is an **ordered immutable sequence of elements**. \n",
+    "\n",
+    "**Ordered** means that individual elements can be accessed using their index.  \n",
+    "**Immutable** means that tuples cannot be changes once they are created.  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "skip"
+    }
+   },
+   "source": [
+    "As with string and list objects, slicing is a very important technique for working with them as long as they are not mutating operations. Accessing elements is done using square brackets `[]`. \n",
     "Tuples are often encountered as return value of a method.\n",
     "Here are a few basic operations with tuples."
    ]
@@ -712,7 +756,7 @@
    "execution_count": 28,
    "metadata": {
     "slideshow": {
-     "slide_type": "subslide"
+     "slide_type": "slide"
     }
    },
    "outputs": [
@@ -769,7 +813,20 @@
    "source": [
     "### Collection type `set`: {}\n",
     "\n",
-    "A set is a collection type that can only hold unique values. If a value is added that is already present this will have no effect (the value will be ignored). If you attempt to add a mutable type (an unhashable element) you get a `TypeError`. They are quite limited in functionality when comppared to other collection types: they are not sliceable or indexable (using brackets `[index]` or `[from:to]`).\n",
+    "A set is a collection type that can only hold unique values.  \n",
+    "If a value is added that is already present this will have no effect (the value will be ignored).  \n",
+    "If you attempt to add a mutable type (an unhashable element) you get a `TypeError`.  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "skip"
+    }
+   },
+   "source": [
+    "They are quite limited in functionality when comppared to other collection types: they are not sliceable or indexable (using brackets `[index]` or `[from:to]`).\n",
     "\n",
     "Below you see the most-used usage scenarios."
    ]
@@ -933,7 +990,8 @@
     "### Collection type `dict`: {}\n",
     "\n",
     "The last collection type discussed here is the dict, which is an abbreviation of _dictionary_.  \n",
-    "This type is called hashmap of map in other programming languages. It is used to hold mappings between _keys_ and _values_, much like real dictionaries. Like sets, the keys of a dict must be immutable types. There are no such restrictions for the values. Also like sets, the keys are always unique. The values, however, can contain duplicates.  \n",
+    "It is used to hold mappings between _keys_ and _values_, much like real dictionaries.  \n",
+    "Like sets, the keys of a dict must be immutable types. There are no restrictions for the values. Also like sets, the keys are always unique. The values, however, can contain duplicates.  \n",
     "Dicts cannot be sliced, but finding values is done using `dictionary[key]`.\n"
    ]
   },
@@ -980,7 +1038,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "#### DIY\n",
     "Now take some time to figure out what the `dict` methods `setdefault()` and `getdefault()` are for and how they are used. Try them out!"
@@ -1072,7 +1134,7 @@
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
-     "slide_type": "skip"
+     "slide_type": "slide"
     }
    },
    "source": [
@@ -1103,7 +1165,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.9.12"
   },
   "vscode": {
    "interpreter": {
