--- a/ITANN_course_description.ipynb
+++ b/ITANN_course_description.ipynb
@@ -61,7 +61,7 @@
     "    * Wishes and expectations\n",
     "    * (Anaconda)\n",
     "    * Jupyter\n",
-    "    * Python as calculator: scalars and -discover!- operators\n",
+    "    * Python as calculator: scalars and operators\n",
     "* Afternoon  \n",
     "    * Datatypes\n",
     "    * Flow control\n",
@@ -87,8 +87,8 @@
     "    * challenges\n",
     "    * writing and using mnodules\n",
     "    * On demand topics\n",
+    "    * [Optional] OOP    \n",
     "* Afternoon\n",
-    "    * [Optional] OOP\n",
     "    * Evaluatie\n",
     "    * Guest lecture\n",
     "\n"
@@ -111,7 +111,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
