--- a/00_anaconda_and_jupyter.ipynb
+++ b/00_anaconda_and_jupyter.ipynb
@@ -315,9 +315,9 @@
  "metadata": {
   "celltoolbar": "Slideshow",
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "base",
    "language": "python",
-   "name": "python3"
+   "name": "base"
   },
   "language_info": {
    "codemirror_mode": {
@@ -329,7 +329,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
