--- a/01_getting_started.ipynb
+++ b/01_getting_started.ipynb
@@ -12,7 +12,7 @@
     "\n",
     "In this course you will get to know the programming language **Python**. You will get to know the language up to a level where you will be able to write some scripts and run Python code as an executable program, or in a notebook environment.\n",
     "\n",
-    "Since this is the preferred way for a majority of data scientists, and a convenient form for educational purposes, we will start off in a notebook setting. The document you are currently reading is a **Jupyter** notebook. A scientific notebook is an electronic  document used for **literate programming**. In literate programming, text (usually in the form of **Markdown**), code, and its output (both textual and graphical) are combined."
+    "Since this is the preferred way for a majority of data scientists, and a convenient form for educational purposes, we will start in a notebook setting. The document you are currently reading is a **Jupyter** notebook. A scientific notebook is an electronic  document used for **literate programming**. In literate programming, text (usually in the form of **Markdown**), code, and its output (both textual and graphical) are combined."
    ]
   },
   {
@@ -25,13 +25,13 @@
    "source": [
     "## An example\n",
     "\n",
-    "Suppose I want to calculate the surface of three equilateral triangles, with sides 3, 4 and 2.21 respectively.\n",
+    "Suppose I want to calculate the surface of three different equilateral triangles, with sides 3, 4 and 2.21 respectively.\n",
     "First I define a **variable** representing the side and assign an initial value to it. To inspect the value of a variable at any given time you can `print()` it."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -66,19 +66,60 @@
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
-     "slide_type": "slide"
+     "slide_type": "skip"
+    }
+   },
+   "source": [
+    "<div class=\"alert alert-block alert-info\">\n",
+    "    <img src=\"pics/64px-Simple_Information.png\" style=\"float:left;margin-right:10px;\">\n",
+    "    <span style=\"display:block;overflow:hidden;\">\n",
+    "        <strong>Code comments</strong><br> Any text occurring on a line after a hash symbol <code>#</code> will be ignored by the python interpreter. Text after a hash is called code comment. <br><br>\n",
+    "    </span>\n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "skip"
     }
    },
    "source": [
     "`print()` is a **function** that can be used to display text on the console (or in a notebook).  \n",
-    "If it is the last statement in a notebook cell, you can simply type the name of the variable you want to see without wrapping it in a call to print().\n",
-    "\n",
+    "If it is the last statement in a notebook cell, you can simply type the name of the variable you want to see without wrapping it in a call to print().\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "<div class=\"alert alert-block alert-info\">\n",
+    "    <img src=\"pics/64px-Simple_Information.png\" style=\"float:left;margin-right:10px;\">\n",
+    "    <span style=\"display:block;overflow:hidden;\">\n",
+    "        <strong>Functions</strong><br>A function is a re-usable piece of code, accessible by its name. It can receive input data (arguments) specified by its parameters. These are passed to the function between parentheses. For instance, <code>print(..., sep=\" \")</code> is a function named print that can receive any number of arguments to print (...) that will be displayed on the console separated by the value specified with the \"sep\" parameter. You can create your own functions very easily as will be shown later.\n",
+    "    </span>\n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
     "Next, I use the `side` variable to calculate the surface of a 3 - 3 - 3 triangle. The formula is $\\frac{1}{2} * width * height$, but since it is equilateral we can simply use $\\frac{1}{2} * side^2$"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -91,12 +132,13 @@
        "'The area of an equilateral triangle with side 3 is 4.5'"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "side = 3\n",
     "area =  0.5 * side**2\n",
     "\n",
     "f'The area of an equilateral triangle with side {side} is {area}'\n"
@@ -110,9 +152,18 @@
     }
    },
    "source": [
-    "The `*` and `**` symbols in the above code cell are called **(mathematical) operators** for multiplication and exponentiation, respectively. They _operate_ on _operands_ that are usually on both side of the operator. Any combination of operator and operands is an _expression_ that evaluates to a result.  \n",
-    "\n",
-    "Other mathematical operators are, not surprisingly, minus (`-`), plus (`+`), division (`/`). There are many more operators, classified as _mathematical_ (like the above), _assignment_ (like the `=` symbol in the above cells), _comparison_ operators (such as `<`), and some more categories. A complete listing of operators can be found [here](https://www.w3schools.com/python/python_operators.asp) or [here](https://www.tutorialspoint.com/python/python_basic_operators.htm).\n"
+    "<div class=\"alert alert-block alert-info\">\n",
+    "    <img src=\"pics/64px-Simple_Information.png\" style=\"float:left;margin-right:10px;\">\n",
+    "    <span style=\"display:block;overflow:hidden;\">\n",
+    "        <strong>Operators</strong><br> \n",
+    "        Operators such as <code>*</code> and <code>**</code> are (combinations of) symbols within Python code that <i>operate</i> on (usually) the two values on either side of it (named <i>operands</i>), and that will generate a new value from these two input values. \n",
+    "        We call this combination an <i>expression</i>. <br> \n",
+    "        For instance, <code>+</code> is the addition operator that takes the values on either side and returns the sum of the two.\n",
+    "        Other mathematical operators are, not surprisingly, minus (<code>-</code>), plus (<code>+</code>), division (<code>/</code>). <br> \n",
+    "        There are many more operators, classified as <i>mathematical</i> (like the above), <i>assignment</i> (like the `=` symbol in the above cells), <i>comparison</i> operators (such as \"&lt;\"), and some more categories. A complete listing of operators can be found <a href=\"https://www.w3schools.com/python/python_operators.asp\">here</a> or \n",
+    "        <a href=\"https://www.tutorialspoint.com/python/python_basic_operators.htm\">here</a>.\n",
+    "    </span>\n",
+    "</div>"
    ]
   },
   {
@@ -127,10 +178,26 @@
     "```python\n",
     "f'The area of an equilateral triangle with side {side} is {area}'\n",
     "```\n",
-    "is a string (a series of characters) in which we can insert values from python variables at the location of the curly braces to produce this:  \n",
-    "  \n",
+    "is a format string; a series of characters in which we can insert values from python variables at the location of the curly braces to produce this:  \n",
     "  \n",
     "`'The area of an equilateral triangle with side 3 is 4.5'`\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "skip"
+    }
+   },
+   "source": [
+    "Until a few Python versions ago we could not use these _format strings_ and needed to write this:\n",
+    "\n",
+    "`print(\"The area of an equilateral triangle with side \", side, \" is \", area)'`\n",
+    "\n",
+    "instead of this:\n",
+    "\n",
+    "`f'The area of an equilateral triangle with side {side} is {area}'`"
    ]
   },
   {
@@ -179,26 +246,15 @@
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
-     "slide_type": "fragment"
+     "slide_type": "slide"
     }
    },
    "source": [
     "This is awful!   \n",
     "\n",
-    "Copy-and-paste activities are a real no-no in programming. "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "Whenever you catch yourself using Ctrl+C & Ctrl+V, stop and consider a better way to do it. In many cases this will result in extracting the copied code into a **function**.  \n",
-    "\n",
-    "A function is a chunk of code that you can re-use, rather than copying it multiple times. Many are already available within the Python programming language (e.g. `print()`), but you write them yourself all the time as well. \n"
+    "Copy-and-paste activities are a real no-no in programming.  \n",
+    "Whenever you catch yourself using Ctrl+C & Ctrl+V, stop and consider a better way to do it.  \n",
+    "In many cases this will result in extracting the copied code into a **function**.  "
    ]
   },
   {
