--- a/08_oo_programming.ipynb
+++ b/08_oo_programming.ipynb
@@ -455,7 +455,7 @@
     "<div class=\"alert alert-block alert-info\">\n",
     "    <img src=\"pics/64px-Simple_Information.png\" style=\"float:left;margin-right:10px;\">\n",
     "    <span style=\"display:block;overflow:hidden;\">\n",
-    "        <strong>Naming conventions</strong>. You may have noticed the use of uppercase characters as first letter of the classes. This is one of the <a href=\"https://peps.python.org/pep-0008/\">PEP 8 style guide</a> conventions. It states that \"Class names should normally use the CapWords convention.\" Properties (fileds) and methods (functions) of classes should again follow this rule \"Function names should be lowercase, with words separated by underscores as necessary to improve readability.\"\n",
+    "        <strong>Naming conventions</strong>. You may have noticed the use of uppercase characters as first letter of the classes. This is one of the <a href=\"https://peps.python.org/pep-0008/\">PEP 8 style guide</a> conventions. It states that \"Class names should normally use the CapWords convention.\" Properties (fields) and methods (functions) of classes should again follow this rule \"Function names should be lowercase, with words separated by underscores as necessary to improve readability.\"\n",
     "    </span>\n",
     "</div>\n"
    ]
@@ -1199,7 +1199,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
