--- a/10_exercises.ipynb
+++ b/10_exercises.ipynb
@@ -626,16 +626,24 @@
     "```\n",
     "</details>\n",
     "\n",
-    "\n",
-    "b) Create a collection storing the moves in a chess game. Each move consists of a piece (e.g. pawn, knight, queen etc) a field of origin (e.g. B2) and a field of destination (e.g. B4). Demonstrate its use by creating and storing a few moves.\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "b) A chess board has 64 fields, indicated by letters for the 8 columns (a-h) and numbers for the rows (1-8). So A1 is the lowerleft field and H8 the upper right one. A chess move consists of a piece (e.g. pawn, knight, queen etc) going from a field of origin (e.g. B2) to a field of destination (e.g. B4). \n",
+    "Create a collection storing a moves in a chess game. \n",
+    "Demonstrate its use by creating and storing a few moves.\n",
     "\n",
     "<details>\n",
     "  <summary style = \"color:OrangeRed;cursor:pointer;\">&#10149; Give me the solution</summary>\n",
     "  \n",
     "```python\n",
-    "#moves must be a list!\n",
+    "#moves must be a list because the should be added during the game!\n",
     "moves = list()\n",
-    "# tuple is best for a single move\n",
+    "# tuple is best for a single move; it always has the same three elements.\n",
     "move = ('pawn', 'e2', 'e4')\n",
     "moves.append(move)\n",
     "move = ('pawn', 'e7', 'e5')\n",
@@ -647,13 +655,15 @@
     "move = ('bishop', 'f1', 'c4')\n",
     "moves.append(move)\n",
     "\n",
-    "# using module pprint to get a nice 2D printed representation\n",
-    "import pprint\n",
-    "pp = pprint.PrettyPrinter(width = 30)\n",
-    "pp.pprint(moves)\n",
+    "print(moves)\n",
     "```\n",
-    "</details>\n",
-    "\n",
+    "</details>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "\n",
     "\n",
     "c) Create a collection representing the board of the game 'tic tac toe' (Dutch: boter kaas en eieren) in which each 'cell' can (1) be empty - a space ' ' (2) have a cross 'X' or (3) a circle 'O'. Remember, collections can be nested!\n",
@@ -671,8 +681,7 @@
     "               ['O', 'X', ' '])\n",
     "pp.pprint(tic_tac_toe)\n",
     "```\n",
-    "</details>\n",
-    "\n"
+    "</details>\n"
    ]
   },
   {
@@ -972,7 +981,59 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## I/O"
+    "# 05 Reading and Writing files"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 05.1 Patient before & after treatment data\n",
+    "In the `data` folder of this repo there is a file named [patients_before_after.csv](./data/patients_before_after.csv). If this assignment is viewed within a browser window wou can click on the link to access it. \n",
+    "Write a function named `process_patient_data()` that \n",
+    "\n",
+    "1. Reads in the data\n",
+    "2. Calculates the difference between \"Before\" and \"After\"\n",
+    "3. Writes the result to a file named `patient_data_processed.csv` with this format:\n",
+    "```\n",
+    "Patient,Difference\n",
+    "1,23\n",
+    "2,40\n",
+    "3,57\n",
+    "...\n",
+    "```\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# YOUR CODE"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 05. Drug trial data\n",
+    "In the `data` folder of this repo there is a file named [placebo_drug_test.csv](./data/placebo_drug_test.csv). If  this assignment is viewed within a browser window wou can click on the link to access it. \n",
+    "Write a function named `analyse_drug_data()` that reads in the file and returns - as a dict data structure - the following information:\n",
+    "\n",
+    "1. The number of subjects in the data\n",
+    "2. The mean, minimum and maximum of the Placebo treatment\n",
+    "3. The mean, minimum and maximum of the Valproate treatment\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# YOUR CODE"
    ]
   },
   {
@@ -1162,7 +1223,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.11.0"
   },
   "vscode": {
    "interpreter": {
